<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TeamActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="false"
        android:gravity="top" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/MenuTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MenuTeam"
                />

            <Button
                android:id="@+id/MenuCars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MenuCars" />

            <Button
                android:id="@+id/MenuDrivers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MenuPilots" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/MenuRace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MenuRace" />

            <Button
                android:id="@+id/MenuFinance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MenuFinance" />

            <Button
                android:id="@+id/MenuManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MenuManager" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
