<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:gravity="bottom|center"
    tools:context=".F1GameManager" >

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/creditsBtn"
        android:layout_alignLeft="@+id/newGame"
        android:layout_alignRight="@+id/newGame"
        android:background="@android:drawable/btn_default"
        android:onClick="sendMessage"
        android:text="@string/continueGame" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continueBtn"
        android:background="@android:drawable/btn_default"
        android:onClick="sendMessage"
        android:text="@string/newGame" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/creditsBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/creditsBtn"
        android:layout_marginBottom="20dp"
        android:background="@android:drawable/btn_default"
        android:onClick="exitApp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/creditsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exitBtn"
        android:layout_alignLeft="@+id/continueBtn"
        android:layout_alignRight="@+id/continueBtn"
        android:background="@android:drawable/btn_default"
        android:text="@string/credits" />

</RelativeLayout>